# byto-dash

./: README.md
dashboard/: .env  main.py  pyproject.toml
dashboard/app/api/v1/: auth.py  auth.pyt  device.py  posts.py  users.py
dashboard/app/core/: config.py  dependencies.py
dashboard/app/db/: session.py
dashboard/app/mail/: client.py  schemas.py  service.py
dashboard/app/mail/templates/: base.html  reset_password.html  verify_email.html
dashboard/app/models/: device.py  post.py  user.py
dashboard/app/schemas/: device.py  post.py  user.py
dashboard/app/services/: user_db.py  user_manager.py
frontend/: .gitignore  package.json  run.sh  svelte.config.js
frontend/src/lib/components/: app-sidebar.svelte  login-form.svelte  nav-main.svelte  signup-form.svelte  site-header.svelte
frontend/src/lib/components/device/: add-device.svelte  devices-list.svelte
frontend/src/lib/errors/: api-error-map.ts
frontend/src/lib/helpers/: timeAgo.ts
frontend/src/lib/services/: auth.service.ts  http.ts
frontend/src/lib/stores/: auth.store.ts  devices.ts  title.ts
frontend/src/lib/types/: device.ts
frontend/src/lib/validation/: auth.schema.ts  login.schema.ts  register.schema.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
frontend/src/routes/forgot-password/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/reset-password/: +page.svelte
frontend/src/routes/verify-user/: +page.svelte
(+4 files in other folders)
